--- a/Web/Content/Views/Home/Index.css
+++ b/Web/Content/Views/Home/Index.css
@@ -1,89 +1,39 @@
-﻿/*overriding bootstrap styles*/
-body {
-    font-family: monospace;
-    background-color: black;
-}
-a {
-    color: rgba(137, 101, 47, 0.9);
-}
-a:hover {
-    color: rgba(137, 101, 47, 1);
-}
-.text-muted:hover {
-    color: #bfbfbf;
-}
-/*done*/
-
-
-section.front-page-main {
-    border: 4px solid;
-    border-color: #89652f;
-    border-radius: 10px;
-    padding-bottom: 20px;
-}
-section.front-page-main,
-section.new-releases .item img,
-section.navigation .menu-btn {
-    border-color: rgba(137, 101, 47, 0.8);
-}
-section.front-page-main:hover,
-section.new-releases .item img:hover,
-ul.news li:hover,
-section.navigation .menu-btn:hover {
-    border-color: rgba(137, 101, 47, 1);
-}
-
-section.new-releases > div.title {
+﻿h1 {
     padding-left: 30px;
     font-size: 24px;
     padding-top: 10px;
     padding-bottom: 10px;
-}
-section.new-releases .thumb {
-    display: block;
-    margin-right: 2.5em;
-    margin-bottom: 10px;
-}
-section.new-releases .thumb img {
-    width: 100%;
+    display: table-cell;
 }
 
 section.new-releases .item {
     padding-right: 5px;
+    padding-bottom: 5px;
+    height: 260px;
+    width: 220px;
+    display: inline-flex;
+}
+section.new-releases .list-item {
+    height: 100%;
+    width: 100%;
+}
+section.new-releases {
+    text-align: center;
 }
 
-ul.news li {
-    border-color: transparent;
-}
-
-section.new-releases .item img:hover {
-    border-color: initial;
-}
 section.new-releases .item .title {
-    font-weight: 900;
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 section.new-releases .item .title,
 section.new-releases .item .subtitle {
     line-height: 1.1em; /*shared with list-item from release list (common?)*/
+    padding-top: .2em;
 }
 section.new-releases .item .subtitle {
     font-weight: 600;
     font-style: italic;
-    font-size: 1.3em;
-}
-section.new-releases .item > div {
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-}
-section.new-releases .item:hover > div {
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);/*black;*/
-}
-section.new-releases .item img {
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-}
-section.new-releases .item:hover img {
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);/*black;*/
+    font-size: 1.2em;
 }
 
 section.new-releases > .title,
@@ -94,54 +44,22 @@ section.news .title {
 section.news .title {
     padding-left: 20px;
 }
-ul.news {
-    line-height: 1.2em;
-    margin-bottom: 1em;
-}
-ul.news a {
-    font-size: 1.4em;
-    color: #cfc07d;
-    color: rgba(207, 192, 125, 0.9);
-}
-ul.news a:hover {
-    color: rgba(207, 192, 125, 1);
-}
-ul.news li {
-    margin-bottom: 5px;
-    padding: 5px;
-    font-weight: bold;
-}
-ul.news li,
-section.new-releases .item img {
-    border-radius: 4px;
-}
 
 section.navigation .menu-btn {
     display: block;
     font-size: 2em;
     font-weight: bold;
-    border-color: #89652f;
+    border-color: #00755e;
     overflow: hidden;
 }
-section.navigation .menu-btn:hover,
-ul.news li:hover {
-    /*background-color: #e6e6e6;*/ /*#c29b61*/
-    background-color: rgba(137, 101, 47, 0.3);
-    /*border-color: #adadad;*/
-}
+
 .front-page-menu { 
     text-transform: uppercase;  
     margin-top: 2em;
+    margin-bottom: 2em;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .front-page-menu > *:not(:last-child) {
     margin-bottom: 0.2em;
-}
-
-
-/*using global style*/
-.btn,
-section.new-releases .item img,
-ul.news li {
-    border-width: 3px;
-    border-style: solid;
 }
