--- a/Web/Views/Shared/DisplayTemplates/Article.cshtml
+++ b/Web/Views/Shared/DisplayTemplates/Article.cshtml
@@ -1,5 +1,9 @@
 ﻿@model RecordLabel.Content.Article
 
 <header>
-    <span class="list-item-title">@Model.Date.ToString("yyyy MM dd") @Html.ActionLink(Model.Title, "View", "Articles", new { id = Model.Id }, null)</span>
+    <div class="list-item-title">
+        @Model.Date.ToString("MMMM dd yyyy")
+        <div>
+            @Html.ActionLink(Model.Title, "View", "Articles", new { id = Model.Id }, null)</div>
+        </div>
 </header>
