--- a/Web/Views/Shared/Error.cshtml
+++ b/Web/Views/Shared/Error.cshtml
@@ -7,6 +7,6 @@
 
 <div class="content">
     <div class="row">
-        <h1>@(Model.Message)</h1>
+        <div class="alert alert-danger">@(Model.Message)</div>
     </div>
 </div>
