--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @model Tuple<Release[], Article[]>
 
 @System.Web.Optimization.Styles.Render("~/Css/Home/Index")
-@System.Web.Optimization.Scripts.Render("~/Css/Shared/List")
+@System.Web.Optimization.Scripts.Render("~/Js/Shared/List")
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
