--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -11,11 +11,14 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" style="margin-bottom: 0px !important">
                     <span style="color: azure">@ApplicationLocalization.Nav_Menu</span>
                 </button>
-                <div>
-                    <a href="/Home/Index">
-                        <img src="@Url.Content($"~/{Settings.StaticImageDirectory}/{Settings.LogoFileName}")" class="pull-left" style="height: 50px" />
-                    </a>
-                </div>
+                @if (!String.IsNullOrEmpty(Settings.LogoFileName))
+                { 
+                    <div>
+                        <a href="/Home/Index">
+                            <img src="@Url.Content($"~/{Settings.StaticImageDirectory}/{Settings.LogoFileName}")" class="pull-left" style="height: 50px" />
+                        </a>
+                    </div>
+                }
             </div>
             <div>
 
@@ -23,14 +26,6 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" aria-labelledby="dropdownMenuDivider">
                     <li>@Html.ActionLink(ApplicationLocalization.NavSection_Releases, "Index", "Release", new { area = "" }, new { @class = "nav" })</li>
-                    @*<li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catalogue <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Artists", "Index", "Artist", new { area = "" }, new { @class = "nav" })</li>
-                                <li>@Html.ActionLink("Releases", "Index", "Release", new { area = "" }, new { @class = "nav" })</li>
-                            </ul>
-                        </li>*@
-
                     <li>@Html.ActionLink(ApplicationLocalization.NavSection_News, "Index", "Articles", new { area = "" }, new { @class = "nav" })</li>
                     <li>@Html.ActionLink(ApplicationLocalization.NavSection_Ordering, "Ordering", "Home", new { area = "" }, new { @class = "nav" })</li>
                     <li>@Html.ActionLink(ApplicationLocalization.NavSection_Contact, "Contact", "Home", new { area = "" }, new { @class = "nav" })</li>
