Added proper gaps between labels and controls in forms. + Using HTML5 number input feature instead of jQuery UI

--- a/Web/Content/bootstrap.css
+++ b/Web/Content/bootstrap.css
@@ -6872,3 +6872,11 @@ td.visible-print {
     display: none !important;
   }
 }
+
+/*fix form edit controls*/
+.form-group > label + div > input:not([type=hidden]),
+.form-group > label + div > select,
+.form-group > label + div > button,
+.form-group > label + div > *:first-child {
+    margin-left: 5px;
+}
