--- a/Web/Views/Release/Edit.cshtml
+++ b/Web/Views/Release/Edit.cshtml
@@ -10,6 +10,10 @@
 @{
     string action = (ViewContext.RouteData.Values["action"] as string)?.ToUpperInvariant();
     ViewBag.Title = action;
+
+    // TODO: centralize this:
+    short dateMin = 1950;
+    short dateMax = 2099;
 }
 
 <h2>@action</h2>
@@ -35,7 +39,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", type = "number", min = dateMin, max = dateMax } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -160,7 +164,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateRecorded, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateRecorded, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateRecorded, new { htmlAttributes = new { @class = "form-control", type = "number", min = dateMin, max = dateMax } })
                 @Html.ValidationMessageFor(model => model.DateRecorded, "", new { @class = "text-danger" })
             </div>
         </div>
