Since this it is no longer being developed for a specific client, I am removing that irrelevant language

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Global.CurrentLanguage <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(RecordLabel.Language.Lithuanian.ToString(), "ChangeLanguage", "Home", new { area = String.Empty, lang = "lt" }, new { @class = "nav" })</li>
+                            <li>@Html.ActionLink(RecordLabel.Language.Japanese.ToString(), "ChangeLanguage", "Home", new { area = String.Empty, lang = "jp" }, new { @class = "nav" })</li>
                             <li>@Html.ActionLink(RecordLabel.Language.English.ToString(), "ChangeLanguage", "Home", new { area = String.Empty, lang = "en" }, new { @class = "nav" })</li>
                         </ul>
                     </li>
