--- a/Web/Views/Shared/EditorTemplates/Reference.cshtml
+++ b/Web/Views/Shared/EditorTemplates/Reference.cshtml
@@ -1,4 +1,4 @@
-﻿@model RecordLabel.Content.Reference
+﻿@model RecordLabel.Content.ReferenceBase
 
 <div>
     @Html.EditorForEnumBasedCollection(model => model.Localization.Collection, localization => localization.Language, localization => localization.Text, new EnumBasedCollections.CssClasses("form-group", "control-label col-md-2", "col-md-10", "form-control"))
